# esstech-hud-plans

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  performance.md
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml  start.sh
backend/api/: config.py  logging_config.py  main.py  runai.py
backend/api/data_processing/: splats.py
backend/api/lib/: pipeline_logger.py  restart_brush_pipeline.py  splat_pipeline.py  types.py
backend/api/lib/compute/: colmap_geometric_data.py  evaluate_colmap.py  evaluate_video_frame.py  frame_picker.py  image_utils.py  remote.py  runai.py  scitas.py  video_frame.py
backend/api/models/: splats.py
backend/api/services/: admin.py  splats.py
backend/api/utils/: colmap_utils.py  files.py  maths.py
backend/api/views/: admin.py  splats.py
backend/scripts/: _deprecated_install_external_softwares.sh  install_external_softwares.sh
backend/scripts/linux/: install_brush.sh  install_colmap.sh  install_ffmpeg.sh  remove_build_dependencies.sh
backend/scripts/macos/: install_brush.sh  install_colmap.sh  install_ffmpeg.sh
docker/: Dockerfile.brush  Dockerfile.colmap  Dockerfile.ffmpeg  brush_unbuferred.sh
frontend/: README.md  entrypoint.sh  index.html  package-lock.json  package.json  quasar.config.ts
frontend/public/: env.js
frontend/src/boot/: api.ts
frontend/src/components/: BlueprintSettings.vue  BrushSettings.vue  ColmapEvaluation.vue  ColmapSettings.vue  CopyButton.vue  (+12 more)
scripts/: generate_splat.py  pyproject.toml
(+20 files in other folders)
