[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Cyprien Lengagne", email = "cyprien.lengagne@epfl.ch" },
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pycolmap>=3.13.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
blueprint = [
    "gsplat>=1.5.3",
    "packaging>=25.0",
    "pillow>=12.1.1",
    "plyfile>=1.1.3",
]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "python-dotenv[cli]>=1.2.1",
]
test = [
    "pytest>=9.0.2",
]

[tool.setuptools]
packages = ["api"]

[tool.codespell]
skip = 'uv.lock'
